--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.Toastify__toast-body {
+  font-size: 1.5rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.Toastify__toast--success {
+  background-color: #ffffff !important;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Toastify__toast-progress-bar--success {
+  background-color: var(--primary) !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.Toastify__close-button > svg {
+  color: var(--black);
 }
 
-.card {
-  padding: 2em;
+.Toastify__progress-bar--success {
+  background-color: var(--primary) !important;
 }
 
-.read-the-docs {
-  color: #888;
+.Toastify__progress-bar--error {
+  background-color: var(--red) !important;
 }
