--- a/src/pages/app/admin/createusers/createusers.module.css
+++ b/src/pages/app/admin/createusers/createusers.module.css
@@ -32,3 +32,25 @@
   height: fit-content;
   height: 45rem;
 }
+.formContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.formLeft {
+  width: 0.6rem;
+  height: 100%;
+  background-color: var(--primary);
+}
+
+.formRight {
+  width: 100%;
+  height: 100%;
+  background: #474747 0% 0% no-repeat padding-box;
+
+  background-image: url("./images/particles.png");
+  background-repeat: repeat-y;
+  background-size: contain;
+}
