--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,24 @@
 .Toastify__progress-bar--error {
   background-color: var(--red) !important;
 }
+
+/* =============== select dropdown ============= */
+.select_label {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 0.8rem;
+  font-size: 1.3rem;
+  color: var(--input_label);
+}
+.select_input {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  height: 3.6rem;
+  font-size: 1.3rem;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #9b9b9b;
+  border-radius: 0.7rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
