--- a/src/components/common/upload/ImageDropzone/imagedropzone.module.css
+++ b/src/components/common/upload/ImageDropzone/imagedropzone.module.css
@@ -18,3 +18,16 @@
   color: var(--input_label);
   font-size: 1.3rem;
 }
+.hint {
+  color: var(--input_label);
+  font-size: 1.1rem;
+  margin-top: 1rem;
+}
+.container p {
+  color: var(--input_label);
+}
+
+.container label {
+  color: var(--primary);
+  text-decoration: underline;
+}
