--- a/src/pages/app/admin/createusers/createusers.module.css
+++ b/src/pages/app/admin/createusers/createusers.module.css
@@ -69,3 +69,12 @@
   width: 50%;
   margin-left: 10rem;
 }
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: end;
+  gap: 1rem;
+  margin-top: 1rem;
+}
