--- a/src/components/common/upload/ImageDropzone/imagedropzone.module.css
+++ b/src/components/common/upload/ImageDropzone/imagedropzone.module.css
@@ -31,3 +31,23 @@
   color: var(--primary);
   text-decoration: underline;
 }
+
+.error {
+  color: var(--red);
+}
+
+.previewContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%; /* Limit the container width to the available space */
+  max-height: 100%; /* Limit the container height to the available space */
+  overflow: hidden; /* Hide any overflowing content */
+}
+
+.previewImage {
+  max-width: 100%; /* Ensure the image doesn't exceed the container width */
+  max-height: 100%; /* Ensure the image doesn't exceed the container height */
+  width: auto; /* Allow the width to adjust to maintain aspect ratio */
+  height: auto; /* Allow the height to adjust to maintain aspect ratio */
+}
