--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,27 @@
   border-radius: 0.7rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+/************************** Custom Scroll Bar  *************************/
+::-webkit-scrollbar {
+  height: 1rem;
+  width: 0.5rem;
+  /* left: -100px; */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #e5e5e5;
+  border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary);
+  border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-light);
+}
