--- a/src/pages/app/admin/homepage/homepage.module.css
+++ b/src/pages/app/admin/homepage/homepage.module.css
@@ -1,7 +1,3 @@
-PageContainer {
-  overflow: auto;
-}
-
 .topContainer {
   width: 100%;
   height: fit-content;
@@ -68,10 +64,10 @@ PageContainer {
   color: #f3f3f3;
   margin-bottom: 1.6rem;
   font-weight: bold;
-  width: 31.5rem;
 }
 
 .sessionHistoryCardContainer {
+  width: 80vw;
   display: flex;
   flex-direction: row;
   gap: 2.4rem;
@@ -248,26 +244,5 @@ PageContainer {
 
   .butonFlexContainer Button {
     margin-top: 0.5rem;
-  }
-}
-
-@media (max-width: 1300px) {
-  .container {
-    width: 98%;
-    float: right;
-  }
-}
-
-@media (max-width: 1280px) {
-  .container {
-    width: 96%;
-    float: right;
-  }
-}
-
-@media (max-width: 990px) {
-  .container {
-    width: 94%;
-    float: right;
   }
 }
