--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,45 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Helvetica Neue", "Poppins", sans-serif;
+  font-family: "Helvetica 400", "Poppins", sans-serif;
 }
 
-/* @font-face {
-  font-family: "Helvetica Neue medium";
-  src: local("Helvetica Neue"),
-    url("./assets/fonts/HelveticaNeueLTProMd.otf") format("opentype");
-} */
+@font-face {
+  font-family: "Helvetica 100";
+  src: url("./assets/fonts/HelveticaNeueLTPro-100.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 200";
+  src: url("./assets/fonts/HelveticaNeueLTPro-200.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 300";
+  src: url("./assets/fonts/HelveticaNeueLTPro-300.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 400";
+  src: url("./assets/fonts/HelveticaNeueLTPro-400.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 500";
+  src: url("./assets/fonts/HelveticaNeueLTPro-500.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 700";
+  src: url("./assets/fonts/HelveticaNeueLTPro-700.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 800";
+  src: url("./assets/fonts/HelveticaNeueLTPro-800.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Helvetica 900";
+  src: url("./assets/fonts/HelveticaNeueLTPro-900.ttf") format("truetype");
+}
