--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -1,6 +1,3 @@
-/* components/common/Button/style.module.css */
-
-/* Default Button Style */
 .default {
   display: inline-block;
   font-weight: 500;
@@ -15,17 +12,17 @@
   color: var(--black);
 }
 
-/* Login Button Style */
 .login {
-  display: inline-block;
-  font-weight: 500;
-  text-align: center;
-  border: 0.1rem solid transparent;
-  padding: 0.5rem 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.4rem;
-  line-height: 1.5;
+  font-size-adjust: 1.4;
+  font-family: "Helvetica 500";
+  border: 0.1rem solid transparent;
+  padding: 0.65rem 2.8rem;
+  padding-top: 0.8rem;
   border-radius: 0.5rem;
-  margin: 0.5rem 0;
   background-color: var(--primary);
   color: var(--black);
 }
