--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  --primary: #ffd15d;
+  --primary: #ffb600;
   --primary-light: #fff4d8;
   --black: #171717;
   --background-color: #f2f2f2;
   --innerbackground: #ffffff;
   --red: red;
-  --toastify-icon-color-success: #ffd15d;
+  --toastify-icon-color-success: #ffb600;
   --label: #415385;
   --input_label: #f3f3f3;
 }
