--- a/src/pages/app/admin/scenarios/scenarios.module.css
+++ b/src/pages/app/admin/scenarios/scenarios.module.css
@@ -35,7 +35,7 @@
 }
 .mainTableContainer {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   border: 0.1rem solid #707070;
   border-radius: 0.6rem;
   padding: 0.3rem;
@@ -85,6 +85,11 @@
 .table_content tbody tr td {
   height: 3rem;
   padding-left: 0.5rem;
+}
+
+.scenarioName:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* for table head rounding */
