--- a/src/pages/app/admin/updatescenarios/updatescenarios.module.css
+++ b/src/pages/app/admin/updatescenarios/updatescenarios.module.css
@@ -8,7 +8,10 @@
   flex: 1;
   height: 100%;
   display: flex;
-  align-items: center;
+  flex-direction: column; 
+  align-items: flex-start; 
+  justify-content: center; 
+
 }
 
 .left label {
@@ -16,6 +19,12 @@
   color: var(--label);
   font-weight: bold;
 }
+
+.lastEditedOn {
+  font-size: 1.4rem;
+  color: var(--black);
+}
+
 .right {
   flex: 1.5;
   display: flex;
@@ -25,8 +34,8 @@
 }
 
 .right img {
-  max-width: 100%; 
-  max-height: 100%; 
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .mainContainer {
@@ -59,10 +68,9 @@
   flex-direction: row;
   gap: 5rem;
   padding: 1.5rem 1rem;
-  
+
   /* Rotate the background image */
   transform: scaleY(-1);
-
 }
 
 .createScenarioLeftInputs,
@@ -74,7 +82,6 @@
 .inputLabel {
   color: var(--input_label);
 }
-
 
 .createScenarioLeftInputs {
   flex: 4.5;
@@ -137,7 +144,7 @@
   flex: 3;
 }
 
-.gameIntroductionLeftInputs label{
+.gameIntroductionLeftInputs label {
   font-size: 1.6rem;
   color: #f3f3f3;
   margin-bottom: 1.6rem;
@@ -145,7 +152,7 @@
 }
 .gameIntroductionTextAreaInputs {
   font: normal;
-  height: 100%;/* to do change height to % */
+  height: 100%; /* to do change height to % */
   resize: none;
 }
 
