--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -35,7 +35,7 @@
 }
 .mainContainer {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   border: 0.1rem solid #707070;
   border-radius: 0.6rem;
   padding: 0.3rem;
