--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,19 @@
   flex-direction: row;
   justify-content: end;
 }
+
+/* ================ small count down=============== */
+.svgPieTimer {
+  position: absolute;
+  top: 57%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: sans-serif;
+}
+.svg-loader {
+  fill: var(--primary);
+}
+
+.svg-border {
+  fill: var(--primary);
+}
