--- a/src/components/ui/usernavbar/usernavbar.module.css
+++ b/src/components/ui/usernavbar/usernavbar.module.css
@@ -15,9 +15,9 @@
   fill: var(--innerbackground);
 }
 
-.icon svg:hover {
+/* .icon svg:hover {
   cursor: pointer;
-}
+} */
 
 .label {
   font-size: 1.75rem;
