--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -40,6 +40,8 @@
 .timer {
   margin-left: 1rem;
 }
+.countdown {
+}
 
 .questionContainer {
   width: 100%;
@@ -80,6 +82,7 @@
   margin-top: 3rem;
   max-height: 45vh;
   overflow-y: auto;
+  padding: 0 1rem;
 }
 
 .answer {
@@ -87,11 +90,11 @@
   height: 4rem;
   border: 0.1rem solid var(--primary);
   background-color: var(--innerbackground);
+  padding: 0 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 1rem;
-  margin-top: 1rem;
+  margin-top: 1.1rem;
   font-size: 1.5rem;
   font-family: "Helvetica 700";
   color: var(--black);
@@ -99,6 +102,10 @@
 
 .answer:hover {
   cursor: pointer;
+}
+
+.selected {
+  background-color: var(--active);
 }
 
 .buttonContainer {
