--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -27,6 +27,20 @@
   color: var(--black);
 }
 
+.buttonlight {
+  display: inline-block;
+  font-weight: 500;
+  text-align: center;
+  border: 0.1rem solid transparent;
+  padding: 0.5rem 2.5rem;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0;
+  background-color: var(--primary-light);
+  color: var(--black);
+}
+
 .cancel {
   display: inline-block;
   font-weight: 500;
