--- a/src/components/ui/inputdatacontainer/inputtdatacontainer.module.css
+++ b/src/components/ui/inputdatacontainer/inputtdatacontainer.module.css
@@ -1,6 +1,6 @@
 .formContainer {
   width: 100%;
-  height: 20rem;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -15,15 +15,13 @@
   height: 100%;
   width: 100%;
   background: #474747 0% 0% no-repeat padding-box;
+  background-image: url("./images/particles.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: right;
   display: flex;
   flex-direction: row;
   gap: 5rem;
-  padding: 1.5rem 1rem;
+  padding: 2rem 1.5rem;
 }
 
-.defaultContainerBackGround {
-    background-image: url("./images/particles.png");
-}
