--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -1,3 +1,9 @@
+.container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .header {
   font-size: 1.8rem;
   color: var(--innerbackground);
@@ -39,8 +45,6 @@
 
 .timer {
   margin-left: 1rem;
-}
-.countdown {
 }
 
 .questionContainer {
@@ -138,4 +142,19 @@
 
 .button:hover {
   cursor: pointer;
+}
+
+.mediaContainer {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--light_black);
+  z-index: 200;
+}
+.mediaContainer > div:nth-child(1) {
+  font-size: 1.3rem;
+  font-family: "helvetica 300";
+  color: var(--innerbackground);
+  margin-bottom: 1rem;
 }
