--- a/src/pages/app/admin/gameplay/gameplay.module.css
+++ b/src/pages/app/admin/gameplay/gameplay.module.css
@@ -151,17 +151,17 @@
   height: 100%;
   display: flex;
   padding-left: 4rem;
-  flex: 2;
+  flex: 1.8;
 }
 .questionContainer {
   margin-top: 8rem;
-  flex: 1;
-  background-color: #474747;
+  width: 100%;
+  background-color: var(--light_black);
   padding: 1.5rem;
 }
 
 .right {
-  flex: 1;
+  flex: 1.2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
