--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -116,7 +116,18 @@
   margin-top: 2rem;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttonContainer > div:nth-child(1) {
+  color: var(--primary);
+  font-size: 1.6rem;
+  font-family: "helvetica 400";
+}
+
+.buttonContainer > div:nth-child(1):hover {
+  cursor: pointer;
 }
 
 .button {
