--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -134,20 +134,21 @@
   display: inline-block;
   text-align: center;
   border: 0.1rem solid transparent;
-  font-size: 1.8rem;
-  padding: 0.5rem 5rem;
+  font-size: 1.6rem;
+  padding: 0.5rem 3rem;
   background-color: var(--primary);
-  border-radius: 0;
+  border-radius: 0.1rem;
   color: var(--black);
 }
+
 .buttonDisabled {
   display: inline-block;
   text-align: center;
   border: 0.1rem solid transparent;
-  font-size: 2.2rem;
-  padding: 1.2rem 7rem;
+  font-size: 1.6rem;
+  padding: 0.5rem 3rem;
   background-color: #969696;
-  border-radius: 0.5rem;
+  border-radius: 0.1rem;
   color: var(--black);
 }
 
@@ -168,4 +169,17 @@
   font-family: "helvetica 300";
   color: var(--innerbackground);
   margin-bottom: 1rem;
+}
+
+.label {
+  font-size: 1.7rem;
+  font-family: "helvetica 500";
+  color: var(--primary-light);
+}
+
+.makeDecision {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
 }
