--- a/src/components/ui/gameplay/question/question.module.css
+++ b/src/components/ui/gameplay/question/question.module.css
@@ -98,6 +98,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin-top: 1.1rem;
   font-size: 1.5rem;
   font-family: "Helvetica 700";
@@ -196,6 +197,11 @@
   color: var(--black);
   font-size: 1rem;
   font-family: "helvetica 500";
-  margin-right: 0.1rem;
+  margin-right: 0.2rem;
   padding-top: 0.3rem;
+}
+.vote {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
