--- a/src/pages/app/admin/createusers/createusers.module.css
+++ b/src/pages/app/admin/createusers/createusers.module.css
@@ -19,7 +19,7 @@
   flex: 1.5;
   height: 100%;
   position: relative;
-  background-image: url("./images/binary.png");
+  /* background-image: url("./images/binary.png"); */
   background-size: cover;
   background-position: center;
 }
@@ -49,7 +49,6 @@
   width: 100%;
   height: 100%;
   background: #474747 0% 0% no-repeat padding-box;
-  background-image: url("./images/particles.png");
   background-repeat: repeat-y;
   background-size: contain;
   display: flex;
