--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -20,7 +20,7 @@
   flex: 1.5;
   height: 100%;
   position: relative;
-  background-image: url("./images/binary.png");
+  /* background-image: url("./images/binary.png"); */
   background-size: cover;
   background-position: center;
 }
