--- a/src/pages/app/admin/questions/uploadquestions/uploadquestions.module.css
+++ b/src/pages/app/admin/questions/uploadquestions/uploadquestions.module.css
@@ -1,11 +1,10 @@
 .conatiner {
-    height: inherit;
-    display: flex;
-    flex-direction: column;
-
+  height: inherit;
+  display: flex;
+  flex-direction: column;
 }
 .topContainer {
-    flex: 2;
+  flex: 2;
   width: 100%;
   height: 14rem;
   display: flex;
@@ -27,7 +26,6 @@
   flex: 1.5;
   height: 100%;
   position: relative;
-  background-image: url("./images/binary.png");
   background-size: cover;
   background-position: center;
 }
@@ -36,8 +34,8 @@
   height: 100%;
   object-fit: contain;
   position: absolute;
-  top: 1.5rem; 
-  z-index: 1; 
+  top: 1.5rem;
+  z-index: 1;
 }
 .buttonContainer {
   position: absolute;
@@ -49,23 +47,20 @@
   z-index: 2;
 }
 
-
 /* Main container */
 .mainContainer {
-    flex: 8;
-    background-color: #FFFFFF;
-    margin-top: 0;
-    border-radius: 0.6rem;
-    padding: 1.5rem;
+  flex: 8;
+  background-color: #ffffff;
+  margin-top: 0;
+  border-radius: 0.6rem;
+  padding: 1.5rem;
 }
 .customFileContianer p,
 .hint {
-    color: #434343;
+  color: #434343;
 }
 
 .customFileContianer {
-    background-color: #FFECBD;
-    height: 15rem;
+  background-color: #ffecbd;
+  height: 15rem;
 }
-
-
