--- a/src/pages/app/admin/masters/masterlist/masterlist.module.css
+++ b/src/pages/app/admin/masters/masterlist/masterlist.module.css
@@ -64,7 +64,7 @@
 .designationsContainer,
 .organizationsContainer,
 .designationsContainer *,
-.organizationsContainer *  {
+.organizationsContainer * {
   cursor: pointer;
 }
 .designationsTop,
@@ -72,7 +72,7 @@
   padding: 0.5rem 1rem;
 }
 .designationsTop,
-.organizationsTop label{
+.organizationsTop label {
   font-size: 1.4rem;
   color: var(--input_label);
 }
@@ -86,7 +86,7 @@
   border-top-left-radius: 0.6rem;
   border-bottom-left-radius: 0.6rem;
 }
-.organizationsBottom { 
+.organizationsBottom {
   border-top-right-radius: 0.6rem;
   border-bottom-right-radius: 0.6rem;
 }
@@ -98,7 +98,6 @@
   bottom: 0;
   right: 0.8rem;
 }
-
 
 /* Bottom container */
 .mainBottomContainer {
@@ -181,6 +180,23 @@
 .table_content th:last-child {
   border-radius: 0 0.6rem 0.6rem 0;
 }
+.actions {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.circleSvg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.4rem; 
+  height: 2.4rem; 
+  border-radius: 50%;
+  background-color: #FFECBD;
+}
+.circleSvg svg {
+  cursor: pointer;
+}
 
 /* pagination */
 
@@ -193,4 +209,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* Modal */
+
+.textAreaStyleClass {
+  font-family: "Helvetica 400";
+  resize: none;
+  width: 100%;
+  height: 10rem;
+  overflow: hidden;
 }
