Master list module [list and add new] & QA fixes

--- a/src/components/ui/userslist/userslist.module.css
+++ b/src/components/ui/userslist/userslist.module.css
@@ -25,14 +25,14 @@
   height: 70%;
 }
 
-.xMarkIcon {
-  width: 70%;
-  height: 70%;
-}
-.userColumns svg:hover {
+/* .xMarkIcon {
   width: 80%;
   height: 80%;
-}
+} */
+/* .userColumns svg:hover {
+  width: 2rem;
+  height: 2.4ren;
+} */
 .plusIconLg,
 .xMarkIcon {
   display: flex;
