--- a/src/pages/app/admin/gameplay/gameplay.module.css
+++ b/src/pages/app/admin/gameplay/gameplay.module.css
@@ -233,3 +233,11 @@
 .pause:hover {
   cursor: pointer;
 }
+
+.loaderContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
