--- a/src/components/trees/realtime/realtime.module.css
+++ b/src/components/trees/realtime/realtime.module.css
@@ -9,54 +9,35 @@
   display: inline-block;
   border-radius: 0.2rem;
   font-size: 1.3rem;
-  font-family: "helvetica 500";
+  font-family: "helvetica 400";
+  border: 0.2rem solid #707070;
 }
-.correct {
-  background-color: #4ead58;
-  display: inline-block;
-  border-radius: 0.2rem;
-  color: var(--innerbackground);
-  font-size: 1.3rem;
-  font-family: "helvetica 500";
-  border: 0.2rem solid var(--primary);
-}
+
 .selected {
   background-color: var(--primary);
   display: inline-block;
   border-radius: 0.2rem;
-  color: var(--innerbackground);
+  color: var(--black);
   font-size: 1.3rem;
   font-family: "helvetica 500";
-}
-.isOptimalNode {
-  background-color: #4ead58;
-  display: inline-block;
-  border-radius: 0.2rem;
-  color: var(--innerbackground);
-  font-size: 1.3rem;
-  font-family: "helvetica 500";
-}
-.isNotOptimalNode {
-  background-color: #7d7d7d;
-  display: inline-block;
-  border-radius: 0.2rem;
-  font-family: var(--innerbackground);
-  font-size: 1.3rem;
-  color: "helvetica 500";
-}
-
-.isOptimal {
-  stroke: #4ead58 !important;
-  stroke-width: 2 !important;
 }
 
 .isNotSelected {
-  stroke: #545454 !important;
+  background-color: #7d7d7d;
+  display: inline-block;
+  border-radius: 0.2rem;
+  font-size: 1.3rem;
+  color: var(--innerbackground);
+  font-family: "helvetica 500";
+}
+
+.isNotSelected {
+  stroke: #e0e0e0 !important;
   stroke-width: 2 !important;
 }
 
 .selectedEdge {
-  stroke: var(--primary) !important;
+  stroke: #707070 !important;
   stroke-width: 2 !important;
 }
 
