Background change, format date changes

--- a/src/pages/app/admin/createscenarios/createscenarios.module.css
+++ b/src/pages/app/admin/createscenarios/createscenarios.module.css
@@ -1,3 +1,10 @@
+.container {
+  background: url("./images/particles-yellow.png");
+  background-size: contain;
+  background-position: top; 
+  background-repeat: no-repeat;
+  background-color: transparent;
+}
 .topContainer {
   width: 100%;
   height: 12rem;
@@ -55,7 +62,7 @@
   background: #474747 0% 0% no-repeat padding-box;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: right;
+  background-position: bottom;
   display: flex;
   flex-direction: row;
   gap: 5rem;
@@ -105,7 +112,7 @@
   background: #474747 0% 0% no-repeat padding-box;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: right;
+  background-position: bottom;
   display: flex;
   flex-direction: row;
   gap: 5rem;
