--- a/src/pages/app/admin/updatescenarios/updatescenarios.module.css
+++ b/src/pages/app/admin/updatescenarios/updatescenarios.module.css
@@ -1,3 +1,9 @@
+.container {
+  background: url("./images/particles-yellow.png");
+  background-size: 80%;
+  background-position: top right;
+  background-repeat: no-repeat;
+}
 .topContainer {
   width: 100%;
   height: 12rem;
@@ -61,7 +67,7 @@
   background: #474747 0% 0% no-repeat padding-box;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: right;
+  background-position: right bottom;
   display: flex;
   flex-direction: row;
   gap: 5rem;
@@ -111,7 +117,7 @@
   background: #474747 0% 0% no-repeat padding-box;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: right;
+  background-position: right bottom;
   display: flex;
   flex-direction: row;
   gap: 5rem;
