--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -1,3 +1,9 @@
+.container {
+  background: url("./images/particles-yellow.png");
+  background-size: 80%;
+  background-position: top right;
+  background-repeat: no-repeat;
+}
 .topContainer {
   width: 100%;
   height: 14rem;
