--- a/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
+++ b/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
@@ -52,6 +52,7 @@
   padding: 0.3rem;
   max-height: 54rem;
   overflow-y: auto;
+  background-color: var(--innerbackground);
 }
 .table_content {
   border-collapse: collapse;
