--- a/src/pages/app/admin/masters/masterlist/masterlist.module.css
+++ b/src/pages/app/admin/masters/masterlist/masterlist.module.css
@@ -21,7 +21,7 @@
   height: 100%;
   display: flex;
   align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: center;
   position: relative;
   /* background-image: url("./images/binary.png"); */
   background-size: cover;
@@ -30,8 +30,8 @@
 .right img {
   /* width: 80%;
   height: 100%; */
-  width: 100%;
-  height: 100%;
+  max-width: 80%;
+  max-height: 80%;
   object-fit: contain;
 }
 
@@ -106,6 +106,8 @@
   border-bottom-right-radius: 0.6rem;
   height: 100%;
   width: 100%;
+  background-color: var(--innerbackground);
+
 }
 /* Table container */
 .mainTableContainer {
