--- a/src/pages/app/admin/questions/questionlist/questionlist.module.css
+++ b/src/pages/app/admin/questions/questionlist/questionlist.module.css
@@ -60,6 +60,7 @@
   padding: 0.3rem;
   max-height: 54rem;
   overflow-y: auto;
+  background-color: var(--innerbackground);
 }
 .table_content {
   border-collapse: collapse;
