--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -1,9 +1,3 @@
-.container {
-  background: url("./images/particles-yellow.png");
-  background-size: 80%;
-  background-position: top right;
-  background-repeat: no-repeat;
-}
 .topContainer {
   width: 100%;
   height: 14rem;
@@ -28,10 +22,13 @@
   position: relative;
   background-size: cover;
   background-position: center;
+  display: flex;
+  align-items: flex-end; 
+  justify-content: flex-start; 
 }
 .right img {
-  width: 80%;
-  height: 100%;
+  max-width: 80%;
+  max-height: 80%;
 }
 .buttonContainer {
   position: absolute;
@@ -46,6 +43,7 @@
   padding: 0.3rem;
   max-height: 54rem;
   overflow-y: auto;
+  background-color: var(--innerbackground);
 }
 .table_content {
   border-collapse: collapse;
