--- a/src/pages/app/common/profile/profile.module.css
+++ b/src/pages/app/common/profile/profile.module.css
@@ -17,14 +17,16 @@
 }
 .right {
   flex: 1.5;
-  height: 100%;
-  position: relative;
+  display: flex;
+  align-items: flex-end; 
+  justify-content: flex-end; 
   background-size: cover;
-  background-position: center;
 }
 .right img {
-  width: 80%;
-  height: 100%;
+  max-width: 80%;
+  max-height: 80%;
+  display: block;
+  float: right;
 }
 .mainContainer {
   width: 100%;
@@ -48,10 +50,12 @@
   width: 100%;
   height: 100%;
   background: #474747 0% 0% no-repeat padding-box;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   background-size: contain;
+  background-position: bottom right;
   display: flex;
   flex-direction: row;
+  transform: scaleY(-1);
 }
 
 .inputLabel {
@@ -61,11 +65,13 @@
 .leftInputs {
   width: 30%;
   margin-left: 2rem;
+  transform: scaleY(-1);
 }
 
 .rightInputs {
   width: 30%;
   margin-left: 10rem;
+  transform: scaleY(-1);
 }
 
 .buttonContainer {
