--- a/src/pages/app/common/profile/profile.module.css
+++ b/src/pages/app/common/profile/profile.module.css
@@ -32,7 +32,6 @@
 .mainContainer {
   width: 100%;
   height: fit-content;
-  height: 36rem;
 }
 .formContainer {
   width: 100%;
@@ -62,6 +61,8 @@
 
 .inputLabel {
   color: var(--input_label);
+  font-size: 1.35rem;
+  font-family: "Helvetica 500";
 }
 
 .leftInputs {
@@ -69,7 +70,7 @@
   transform: scaleY(-1);
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 4rem;
 }
 
 .rightInputs {
@@ -78,7 +79,7 @@
   transform: scaleY(-1);
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 4rem;
 }
 
 .buttonContainer {
