View instances [UI & Tree], add edit and delete icons, master list [ display list data ], QA [  undefended date in user list, phone validations (starting with 6789) ] resolved.

--- a/src/pages/app/admin/gameinstances/createinstanaces/createinstances.module.css
+++ b/src/pages/app/admin/gameinstances/createinstanaces/createinstances.module.css
@@ -33,8 +33,9 @@
   display: block;
 }
 .inputLabel {
-  font-size: 1.3rem;
   color: var(--input_label);
+  font-size: 1.3rem;
+  font-family: "Helvetica 500";
 }
 .error {
   color: var(--red);
