--- a/src/pages/app/admin/users/users.module.css
+++ b/src/pages/app/admin/users/users.module.css
@@ -4,18 +4,39 @@
   display: flex;
   flex-direction: row;
 }
+
 .left {
   flex: 1;
   height: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.left > div:first-child {
+  flex-grow: 1;
+  display: flex;
   align-items: center;
 }
 
-.left label {
+.left > div:first-child > label {
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
 }
+
+.left > div:nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left > div:nth-child(2) > label {
+  font-size: 1.6rem;
+  font-weight: bold;
+  font-family: Helvetica 500;
+  color: var(--input-label_dark);
+  align-self: flex-start;
+}
+
 .right {
   flex: 1.5;
   height: 100%;
