--- a/src/pages/app/admin/homepage/homepage.module.css
+++ b/src/pages/app/admin/homepage/homepage.module.css
@@ -92,6 +92,9 @@
 .cardTopContainerLeft {
   flex: 7;
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .cardTopContainerRight {
