added nedges and team member UI

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@
   --label: #415385;
   --input_label: #f3f3f3;
   --input_label_dark: #434343;
-
-  
+  --green: #50ad95;
   --active: #ffe299;
   --light_black: #474747;
 }
