--- a/src/components/teammembers/teammembers.module.css
+++ b/src/components/teammembers/teammembers.module.css
@@ -1,9 +1,11 @@
 .container {
-  background-color: var(--innerbackground);
+  background-color: #f3f3f3;
+  padding-bottom: 1rem;
+  border-radius: 0.25rem;
 }
 
 .header {
-  width: 24rem;
+  width: 30rem;
   height: 3.5rem;
   display: flex;
   flex-direction: row;
@@ -14,7 +16,7 @@
 
 .header > div:nth-child(1) {
   font-size: 1.4rem;
-  font-family: "helvetica 300";
+  font-family: "helvetica 400";
 }
 
 .arrow {
@@ -24,5 +26,63 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "helvetica 300";
+}
+
+.mainContainer {
+  overflow-y: auto;
+  max-height: 18rem;
+}
+.item {
+  width: 100%;
+  margin: 1rem 0rem;
+}
+
+.item > div:nth-child(1) {
+  font-size: 1.2rem;
+  font-family: "helvetica 400";
+  text-transform: capitalize;
+  margin: 0 1rem;
+}
+
+.userContainer {
+  background-color: var(--innerbackground);
+  margin: 0 1rem;
+  padding: 0.5rem 0;
+  margin-top: 0.5rem;
+}
+
+.userContainer hr {
+  margin: 0.5rem 1rem;
+}
+.itemDetails {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.25rem 1rem;
+}
+
+.itemDetails > div {
+  font-size: 1.1rem;
+  font-family: "helvetica 400";
+}
+
+.itemDetails > div:nth-child(1) {
+  width: 2.4rem !important;
+  flex: none !important;
+  height: 2.4rem;
+  border-radius: 2.4rem;
+  background-color: #fecece;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.itemDetails > div:nth-child(4) {
+  width: 1rem !important;
+  flex: none !important;
+  height: 1rem;
+  border-radius: 1rem;
+  background-color: var(--green);
 }
