--- a/src/pages/app/admin/questions/questionbuilder/questionbuilder.module.css
+++ b/src/pages/app/admin/questions/questionbuilder/questionbuilder.module.css
@@ -159,7 +159,7 @@
   flex: 1;
 }
 .answerInputFields > :nth-child(3),
-:nth-child(4) {
+.answerInputFields > :nth-child(4) {
   flex: 2;
 }
 .answerInputFields > :nth-child(5) {
