--- a/src/components/nudges/nudges.module.css
+++ b/src/components/nudges/nudges.module.css
@@ -1,13 +1,12 @@
 .container {
   background-color: #f3f3f3;
-  padding-bottom: 1rem;
   margin-bottom: 0.8rem;
   border-radius: 0.25rem;
 }
 
 .header {
   width: 30rem;
-  height: 3.5rem;
+  height: 3.8rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -19,6 +18,10 @@
   font-size: 1.4rem;
   font-family: "helvetica 400";
 }
+.header:hover {
+  cursor: pointer;
+}
+
 .arrow {
   width: 1.4rem;
   font-size: 3rem;
@@ -26,6 +29,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.description {
+  margin-bottom: 1rem;
+}
+
+.show {
+  transform: rotate(180deg);
 }
 .input {
   display: flex;
