--- a/src/components/teammembers/teammembers.module.css
+++ b/src/components/teammembers/teammembers.module.css
@@ -1,12 +1,11 @@
 .container {
   background-color: #f3f3f3;
-  padding-bottom: 1rem;
   border-radius: 0.25rem;
 }
 
 .header {
   width: 30rem;
-  height: 3.5rem;
+  height: 3.8rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -19,6 +18,10 @@
   font-family: "helvetica 400";
 }
 
+.header:hover {
+  cursor: pointer;
+}
+
 .arrow {
   width: 1.4rem;
   font-size: 3rem;
@@ -28,8 +31,13 @@
   align-items: center;
 }
 
+.show {
+  transform: rotate(180deg);
+}
+
 .mainContainer {
   overflow-y: auto;
+  margin-bottom: 1rem;
   max-height: 18rem;
 }
 .item {
